# Lexis

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Dfa.cpp  Dfa.hpp  Lexer.in.cpp  Lexis.cpp  LexisConfig.hpp.in  Minimizer.cpp  Minimizer.hpp  RegexSyntaxTree.cpp  RegexSyntaxTree.hpp  Utils.cpp  Utils.h  Utils.hpp
test/: CMakeLists.txt
test/test1/: CMakeLists.txt  Test1.cpp  regex.txt  test.py
test/test2/: CMakeLists.txt  test.py
test/test3/: CMakeLists.txt  test.py
